[package]
name = "ipfs-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs = { git="https://github.com/rs-ipfs/rust-ipfs", rev="275b761" }
tokio = { version="1.18.2", features=["io-std"] }
futures = "0.3.21"
futures-io = "0.3.21"
tracing-subscriber = "0.3.11"
anyhow = "1.0.57"
async-compression = { version="0.3.13", features=["futures-io", "zstd"] }
zstd = "0.11.2+zstd.1.5.2"
async-stream = "0.3.3"
tracing-futures = "0.2.5"
tracing = "0.1.34"
